# passkey-abdication

./: README.md
passkey_abdication_backend/: Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  testselenium.ipynb
passkey_abdication_backend/pad/: asgi.py  settings.py  urls.py  wsgi.py
passkey_abdication_backend/pad/api/: apps.py  serializers.py  urls.py  views.py
passkey_abdication_frontend/: .gitignore  package-lock.json  package.json
passkey_abdication_frontend/app/: globals.css  layout.tsx  page.tsx  test.html
passkey_abdication_frontend/app/components/: PasskeyLeft.tsx  PasskeyRight.tsx  Password.tsx  SignIn.tsx  Username.tsx  Welcome.tsx
passkey_abdication_frontend/app/credential/: page.tsx
passkey_abdication_frontend/app/passkeyenrollment/: page.tsx
